objects/CL_User_Setting__c.object
<CustomObject>
    <description>Case logics settings specific to a user. (record is initially inserted via user trigger.. or for system admins there will be a script / cmp to do manually_</description>
    <fields>
        <fullName>Profile__c</fullName>
        <description>FF To User Profile Name</description>
        <formula>User__r.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF To User Profile Name</inlineHelpText>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Machine_Type__c</fullName>
        <description>Retains state of the toggle button in the app (match to asset.recordtype)</description>
        <inlineHelpText>Retains state of the toggle button in the app (match to asset.recordtype)</inlineHelpText>
        <label>Selected Machine Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VGT</fullName>
                    <default>true</default>
                    <label>VGT</label>
                </value>
                <value>
                    <fullName>Redemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Status__c</fullName>
        <description>FF to User.IsActive</description>
        <formula>IF( User__r.IsActive,&apos;Active&apos;, &apos;INACTIVE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FF to User.IsActive</inlineHelpText>
        <label>User Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Standard User Record. (Must be CL Profile or Accel Super User Profile or Accel Regional Route Management Profile... or you must be an Admin To Override)</description>
        <inlineHelpText>Lookup to the Standard User Record. (Must be CL Profile or Accel Super User Profile or Accel Regional Route Management Profile... or you must be an Admin To Override)</inlineHelpText>
        <label>User</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <errorMessage>User Must be a System Admin or CL Profile or Accel Super User Profile or Accel Regional Route Management Profile.</errorMessage>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>startsWith</operation>
                <value>CL</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Accel Super User</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Accel Regional Route Management</value>
            </filterItems>
            <infoMessage>Please add a system administrator or Cash Logistics User  or Accel Super User Profile or Accel Regional Route Management Profile.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CL_User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CL User Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>User_Status__c</columns>
        <columns>Profile__c</columns>
        <columns>Selected_Machine_Type__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CL User Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CL User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>